fix: Добавить nowrap тексту

--- a/blocks/elements/__heading/elements__heading.css
+++ b/blocks/elements/__heading/elements__heading.css
@@ -7,4 +7,5 @@
   line-height: 29px;
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
