--- a/blocks/profile/__info/_description/profile__info_description.css
+++ b/blocks/profile/__info/_description/profile__info_description.css
@@ -7,4 +7,5 @@
   grid-area: description;
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
