--- a/blocks/profile/__info/_name/profile__info_name.css
+++ b/blocks/profile/__info/_name/profile__info_name.css
@@ -7,4 +7,5 @@
   grid-area: name;
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
